# tiny-url

./: README.md
server/: .env  Cargo.toml  Dockerfile  docker-compose.yml
server/adapter/: Cargo.toml
server/adapter/src/: lib.rs  modules.rs  repository.rs
server/adapter/src/persistence/: mysql.rs
server/adapter/src/repository/: health_check.rs  url.rs
server/app/: Cargo.toml
server/app/src/: usecase.rs
server/app/src/usecase/: health_check.rs  url.rs
server/ddl/: init.sql
server/driver/: Cargo.toml
server/driver/src/: module.rs  routes.rs  startup.rs
server/driver/src/model/: url.rs
server/driver/src/routes/: health.rs  url.rs
server/kernel/: Cargo.toml
server/kernel/src/: model.rs
server/kernel/src/model/: url.rs
server/kernel/src/repository/: url.rs
server/src/: main.rs
web/: package.json  pnpm-lock.yaml  tailwind.config.js
web/src/lib/types/: index.ts
web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  Header.svelte
