[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
anyhow = "1.0.71"
async-trait = "0.1.68"
derive-new = "0.5.9"
sqlx = { version = "0.7.0-alpha.3", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono"] }
tokio = { version = "1.28.1", features = ["rt", "macros", "test-util"] }
dotenv = "0.15.0"
