[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adapter = { path = "../adapter" }
kernel = { path = "../kernel" }
derive-new = "0.5.9"
anyhow = "1.0.71"
tokio = { version = "1.28.1", default-features = false, features = ["rt", "macros", "test-util"] }

[dev-dependencies]
dotenv = "0.15.0"
